--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,8 @@ spring.mail.test-connection=false
 
 #SSL Certificate
 # keytool -genkeypair -alias BloodDonationKey -keyalg RSA -keysize 2048 -keystore BloodDonationKeyStore.p12 -validity 3650
-server.port=443
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=BloodDonationKeyStore.p12
-server.ssl.key-store-password=BloodDonation
-server.ssl.key-alias=BloodDonationKey
+#server.port=443
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=BloodDonationKeyStore.p12
+#server.ssl.key-store-password=BloodDonation
+#server.ssl.key-alias=BloodDonationKey
